--- a/city-server/config/config.yaml
+++ b/city-server/config/config.yaml
@@ -2,13 +2,14 @@ server:
   address: "localhost:8080"
 
 database:
-  dsn: "host=localhost port=5432 user=postgres dbname=city_server password=1234 sslmode=disable"
+  dsn: "host=localhost port=5432 user=postgres dbname=city-server password=code1234 sslmode=disable"
 
 assets:
   storage_path: "./data/assets"
 
 auth:
   hmac_secret: "${HMAC_SECRET}"
+  api_token: "super-secret-token"
 
 notification:
   telegram_bot_token: "${TELEGRAM_BOT_TOKEN}"
