--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ version: '3.8'
 services:
   server:
     build: .
-    ports:
-      - "8082:8082"
+    network_mode: "host"
     volumes:
       - ./config:/app/config
     environment:
