--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,5 @@ services:
       - ./config:/app/config
     environment:
       - TZ=UTC
+      - TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
+      - TELEGRAM_CHAT_IDS: ${TELEGRAM_CHAT_IDS}
