--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           key: ${{ secrets.VPS_KEY }}
           script: |
             cd /opt/city-server || mkdir -p /opt/city-server && cd /opt/city-server
+            docker system prune -a -f
             if [ -d .git ]; then git pull; else git clone https://github.com/IceDarold/LetovoLinkedInCityServer.git .; fi
-            docker system prune -a
             docker-compose down || true
             docker-compose up --build -d
